# hsfd-data-mining

./: .gitignore  README.md  pyproject.toml  repro_german_anchor.ipynb  reproduce_adult_anchor.ipynb  setup.md
scripts/tabular/: anchor_adult.ipynb  preparation of adult.ipynb
scripts/tabular/lore/: lore_application_general.py
